<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/MergeImportDismissPlaylist"
        style="@style/Text.Popup"
        android:text="@string/MergeImportDismissPlaylistText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/mergeImportDismissLayout"
        style="@style/LinearLayoutButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MergeImportDismissPlaylist">

        <Button
            android:id="@+id/mergePlaylistButton"
            style="@style/GradientButton.Popup"
            android:layout_height="wrap_content"
            android:text="@string/mergePlaylist" />

        <Button
            android:id="@+id/importPlaylistButton"
            style="@style/GradientButton.Popup"
            android:text="@string/importPlaylist" />
        <Button
            android:id="@+id/dismissOnlineButton"
            style="@style/GradientButton.Popup"
            android:text="@string/dismissOnlinePlaylist" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>