<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".data.view.UserProfileActivity">

    <ImageView
        android:id="@+id/topImage"
        style="@style/Background.Game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/userIcon"
        android:layout_width="131dp"
        android:layout_height="135dp"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="@id/topImage"
        app:layout_constraintStart_toStartOf="@id/topImage"
        app:layout_constraintTop_toTopOf="@id/topImage"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/usernameInitial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="96sp"
        app:layout_constraintBottom_toBottomOf="@+id/userIcon"
        app:layout_constraintEnd_toEndOf="@+id/userIcon"
        app:layout_constraintStart_toStartOf="@+id/userIcon"
        app:layout_constraintTop_toTopOf="@+id/userIcon" />

    <EditText
        android:id="@+id/username"
        style="@style/Text.OnPrimary"
        android:layout_marginTop="20dp"
        android:text="username"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@id/topImage"
        app:layout_constraintStart_toStartOf="@id/topImage"
        app:layout_constraintTop_toBottomOf="@+id/userIcon"
        tools:ignore="Autofill,LabelFor"
        android:inputType="textPersonName" />

    <RelativeLayout
        android:id="@+id/userButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        android:paddingHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/topImage"
        app:layout_constraintEnd_toEndOf="@id/topImage"
        app:layout_constraintStart_toStartOf="@id/topImage" >

        <!-- Invisible view to help center the two EditText -->
        <View
            android:id="@+id/centerHelper"
            android:layout_height="0dp"
            android:layout_width="24dp"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/launchSpotifyButton"
            style="@style/GradientButton"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/centerHelper"
            android:backgroundTint="@color/spotify_green"
            android:text="Spotify"
            app:icon="@drawable/ic_spotify_logo"
            app:iconGravity="start" />

        <Button
            android:id="@+id/googleSignInButton"
            style="@style/GradientButton"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:backgroundTint="@color/red"
            app:icon="@drawable/googleg_disabled_color_18"
            app:iconGravity="start"
            android:text="@string/sign_in_message"
            android:layout_alignParentEnd="true"
            android:layout_toEndOf="@+id/centerHelper" />

    </RelativeLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/container"
        style="@style/RecyclerViews"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/userButtonLayout" />

    <Button
        android:id="@+id/saveUserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save changes"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintEnd_toEndOf="@+id/username" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addPlaylistButton"
        style="@style/Button.Floating"
        android:contentDescription="@string/add_a_playlist_manually"
        android:src="@drawable/ic_baseline_add_24"
        app:layout_constraintBottom_toBottomOf="@+id/container"
        app:layout_constraintEnd_toEndOf="@+id/container" />

</androidx.constraintlayout.widget.ConstraintLayout>




